--- a/weather.css
+++ b/weather.css
@@ -50,7 +50,9 @@
     border-radius: 5px;
 }
 
-.cityName, .temp, .wind, .humidity, .date{
+.cityName, .temp, .wind, .humidity, .date, .cityName2, .temp2, .wind2, .humidity2, .date2,
+.cityName3, .temp3, .wind3, .humidity3, .date3, .cityName4, .temp4, .wind4, .humidity4, .date4,
+.cityName5, .temp5, .wind5, .humidity5, .date5 .cityName6, .temp6, .wind6, .humidity6, .date6{
     padding: 10px;
 }
 
